PHOENIX-33 User design change, updated id from Integer type to Long